--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,10 @@
-version: '2.1'
+version: '3'
 
 services:
-  enter: 
-    image: geo-mod
-    build: .
-    volumes:
-      - ./src:/usr/src
-    command: tail -f /dev/null
-    user: root
-    privileged: true
-  dev:
-    image: geo-mod
-    build: .
-    volumes:
-      - ./src:/usr/src
-    user: root
-    privileged: true
-    command: bash -c "
-        g++ -o main main.cpp -I /usr/local/lib;
-        ./main;
-        rm main;
-      "
-  build:
-    image: geo-mod
-    build: .
-    volumes:
-      - ./src:/usr/src/program
-      - ./build:/usr/src/build
-    user: root
-    privileged: true
-    command: bash -c "
-        g++ -o main main.cpp;
-        mv main ./build/main;
-      "
+  # make:
+  #   image: 'gcc:4.9'
+  #   volumes:
+  #     - ./src:/home
+  #   user: root
+  #   privileged: true
+  #   command: 'make all --directory=/home'
